monitoring/kube-prometheus-stack/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Prometheus"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "prometheus.png"
    gethomepage.dev/description: "Metrics"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=prometheus"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-prometheus
  hostnames:
    - prometheus.stevevaradi.me
  rules:
    - backendRefs:
        - name: misty-show-kube-prometheus-prometheus
          port: 9090
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: lan-only-prometheus
  namespace: monitoring
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: prometheus
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 192.168.0.0/24
            - 10.192.1.0/24
